fix gap on top and left of page

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body{
   height:100vh;
   width: 100vw;
+  margin: 0;
   background-color: black;
   display: grid;
   grid-template-columns: 1fr 5fr;
